[tool.poetry]
name = "apkpure"
package-mode = true
version = "0.2.1"
description = "An API for interacting with the APK Pure website, allowing you to search for apps, retrieve app information, and download apps programmatically."
authors = ["Anis Homsy <anisfhomsi@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/anishomsy/apkpure"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
repository = "https://github.com/anishomsy/apkpure"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tqdm = "^4.66.4"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
